# layer0

./: Cargo.toml  Dockerfile  Justfile  README.md  Railway.toml
.github/workflows/: ci.yml
config/: dxid.toml
docs/: ai_hypervisor.md  architecture.md  cli_usage.md  deployment_railway.md  tui_guide.md
dxid-ai-hypervisor/: Cargo.toml
dxid-ai-hypervisor/src/: lib.rs
dxid-cli/: Cargo.toml
dxid-cli/src/: main.rs
dxid-config/: Cargo.toml
dxid-config/src/: lib.rs
dxid-consensus/: Cargo.toml
dxid-consensus/src/: lib.rs
dxid-contracts/: Cargo.toml
dxid-contracts/src/: lib.rs
dxid-core/: Cargo.toml
dxid-core/src/: lib.rs
dxid-crypto/: Cargo.toml
dxid-crypto/src/: lib.rs
dxid-interop/: Cargo.toml
dxid-interop/src/: lib.rs
dxid-network/: Cargo.toml
dxid-network/src/: lib.rs
dxid-node/: Cargo.toml
dxid-node/src/: lib.rs  main.rs
dxid-rpc/: Cargo.toml  build.rs
dxid-rpc/proto/: dxid.proto
dxid-rpc/src/: lib.rs
dxid-storage/: Cargo.toml
dxid-storage/src/: lib.rs
dxid-tui/: Cargo.toml
dxid-tui/src/: lib.rs  main.rs
dxid-vectors/: Cargo.toml
dxid-vectors/src/: lib.rs
dxid-wallet/: Cargo.toml
dxid-wallet/src/: lib.rs
