[package]
name = "dxid-ai-hypervisor"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
dxid-core = { path = "../dxid-core" }
dxid-storage = { path = "../dxid-storage" }
dxid-vectors = { path = "../dxid-vectors" }
dxid-config = { path = "../dxid-config" }
