[package]
name = "dxid-config"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
config.workspace = true
thiserror.workspace = true
toml.workspace = true
uuid.workspace = true
tracing.workspace = true
