[package]
name = "dxid-consensus"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
rand.workspace = true
blake3.workspace = true
async-trait.workspace = true
dxid-core = { path = "../dxid-core" }
dxid-crypto = { path = "../dxid-crypto" }
parking_lot.workspace = true
