[package]
name = "dxid-crypto"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true
bs58.workspace = true
rand.workspace = true
rand_core.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
sha2.workspace = true
sha3.workspace = true
async-trait.workspace = true
hex.workspace = true
once_cell.workspace = true
dxid-core = { path = "../dxid-core" }
ark-groth16 = "0.4"
ark-bls12-381 = "0.4"
ark-relations = "0.4"
ark-std = "0.4"
winterfell = "0.6"
bincode.workspace = true
ark-ff = "0.4"
ark-serialize = "0.4"
