[package]
name = "dxid-wallet"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
rand.workspace = true
pbkdf2.workspace = true
aes-gcm.workspace = true
hmac.workspace = true
sha2.workspace = true
base64.workspace = true
bs58.workspace = true
parking_lot.workspace = true
dxid-core = { path = "../dxid-core" }
dxid-crypto = { path = "../dxid-crypto" }
